--- a/index.Rmd
+++ b/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: 'Decision Support Modeling for Utoy Creek'
-author: "Kyle McKay and Liya Abera"
+author: "Kyle McKay, Liya Abera, and Garrett Menichino"
 date: "August 2024"
 output:
   html_document:
@@ -374,13 +374,13 @@ invisible(dev.off())
 
 ## *Monetary Costs*
 
-Cost estimates were compiled for each site-scale restoration action following standard cost engineering methods. At this phase, project first cost represents a parametric cost for comparative purposes only, which is largely confined to construction activities. No real estate, pre-construction engineering and design, construction management, or cultural resources costs were included at present.  
+Cost estimates were compiled for each site-scale restoration action following standard cost engineering methods. At this phase, construction cost represents a parametric cost for comparative purposes only, which is largely confined to construction activities. No real estate, pre-construction engineering and design, construction management, or cultural resources costs were included at present.  
 
-Monitoring and adaptive management are typically conducted over a ten-year window for ecosystem restoration projects (WRDA 2007, Section 2036). Monitoring cost was estimated for four points in time, a sampling event during pre-construction engineering design as well as sampling in years 1, 3, and 5 following construction. Each sampling event assumed collection of data on fish communities, invertebrate communities, bathymetric mapping, and hydraulic outcomes. Adaptive management was estimated a proportion of project first cost ranging between 7.5% and 25% depending on site- and alternative-complexity. **MONITORING COSTS SEEM HIGH RELATIVE TO ADAPTIVE MANAGEMENT COSTS.**
+Monitoring and adaptive management are typically conducted over a ten-year window for ecosystem restoration projects (WRDA 2007, Section 2036). Monitoring cost was estimated for four points in time, a sampling event during pre-construction engineering design as well as sampling in years 1, 3, and 5 following construction. Each sampling event assumed collection of data on fish communities, invertebrate communities, bathymetric mapping, and hydraulic outcomes. Adaptive management was estimated a proportion of construction cost ranging between 7.5% and 25% depending on site- and alternative-complexity. **MONITORING COSTS SEEM HIGH RELATIVE TO ADAPTIVE MANAGEMENT COSTS.**
 
-Operations, maintenance, repair, replacement, and rehabilitation (OMRRR) costs were estimated relative to four common practices. First, quarterly site visits were planned for general maintenance to any small-scale restoration features, trash removal, and minor maintenance of educational features (signage, benches, or classrooms) at a cost of \$10,000 per year. Second, bi-annual site visits were planned to include a simple inspection, which were estimated as \$4.00 per linear foot of stream every other year. Third, invasive species removal was estimated to cost \$15,000 per site and occur once every 10-years. Fourth, repair of structural restoration features (e.g., rock, wood, and earth work) was assumed to occur once every 25 years. These estimates resulted in OMRRR costs ranging from 1.2% to 16.7% or project first cost depending on the site and alternative (Appendix B, Table B1), which is approximately in line with other stream restoration projects (Abera and McKay 2023). **OMRRR VALUES WERE ALTERED SIGNIFICANTLY TO BREING THEM IN LINE WITH COMMON RANGES.**
+Operations, maintenance, repair, replacement, and rehabilitation (OMRRR) costs were estimated relative to four common practices. First, quarterly site visits were planned for general maintenance to any small-scale restoration features, trash removal, and minor maintenance of educational features (signage, benches, or classrooms) at a cost of \$10,000 per year. Second, bi-annual site visits were planned to include a simple inspection, which were estimated as \$4.00 per linear foot of stream every other year. Third, invasive species removal was estimated to cost \$15,000 per site and occur once every 10-years. Fourth, repair of structural restoration features (e.g., rock, wood, and earth work) was assumed to occur once every 25 years. These estimates resulted in OMRRR costs ranging from 1.2% to 16.7% or construction cost depending on the site and alternative (Appendix B, Table B1), which is approximately in line with other stream restoration projects (Abera and McKay 2023). **OMRRR VALUES WERE ALTERED SIGNIFICANTLY TO BREING THEM IN LINE WITH COMMON RANGES.**
 
-Average annual economic costs were computed for all cost categories. Interest during construction was computed based on project first costs with site- and alternative-specific construction durations. The FY24 Federal discount rate (2.75%, USACE 2023) was used to annualize project first cost, interest during construction, and monitoring and adaptive management expenses over a 50-year planning horizon. Cost data were annualized using the [EngrEcon](https://cran.r-project.org/web/packages/EngrEcon/index.html) software package, although a [web application](https://wrises.shinyapps.io/engrecon-webapp/) also exists for conducting these calculations. Table 3 provides an example of cost estimates for Site-17F, and Table B03 in Appendix B provides a cost summary for all sites and actions.
+Average annual economic costs were computed for all cost categories. Interest during construction was computed based on construction costs with site- and alternative-specific construction durations. The FY24 Federal discount rate (2.75%, USACE 2023) was used to annualize construction cost, interest during construction, and monitoring and adaptive management expenses over a 50-year planning horizon. Cost data were annualized using the [EngrEcon](https://cran.r-project.org/web/packages/EngrEcon/index.html) software package, although a [web application](https://wrises.shinyapps.io/engrecon-webapp/) also exists for conducting these calculations. Table 3 provides an example of cost estimates for Site-17F, and Table B03 in Appendix B provides a cost summary for all sites and actions.
 
 
 ```{r}
@@ -448,7 +448,7 @@ colnames(cost_ann) <- c("ReachID", "SiteAction", "ProjectFirst", "Monitoring", "
   cost_ann$ReachID <- cost$ReachID
   cost_ann$SiteAction <- cost$SiteAction
   
-  #Annualize project first cost and IDC over 50 year horizon
+  #Annualize construction cost and IDC over 50 year horizon
   cost_ann$ProjectFirst <- present_to_annual(discount, 50, cost$Project_First)
   cost_ann$IDC <- present_to_annual(discount, 50, cost_present$IDC)
   
@@ -472,7 +472,7 @@ Table03 <- cbind(cost$ReachID, cost$SiteAction, cost$Duration_mo,
                  formatC(cost_ann$Total, format="f", digits=0, big.mark = ","))
 Table03 <- Table03[1:4,]
 colnames(Table03) <- c("Site", "Alternative", "Construction Duration (mo)", 
-                       "Project First Cost", "Monitoring Cost", "Adapative Management Cost",
+                       "Construction Cost", "Monitoring Cost", "Adapative Management Cost",
                        "OMRRR Annual Cost", "Total Annualized Cost")
 rownames(Table03) <- NULL
 knitr::kable(Table03, caption="Table 3. Example of monetary cost data for Site-17F2M.", align='c') 
@@ -491,7 +491,7 @@ Table04 <- cbind(AAHU$ReachID, AAHU$SiteAction,
                  formatC(cost_present$ProjectFirst, format="f", digits=0, big.mark = ","), 
                  formatC(cost_ann$Total, format="f", digits=0, big.mark = ","),
                  formatC(ifelse(AAHU$Lift > 0, cost_ann$Total / AAHU$Lift, 0), format="f", digits=0, big.mark = ","))
-colnames(Table04) <- c("Site", "Alternative", "Ecological Outputs (AAHU)", "Ecological Lift (AAHU)", "Project First Cost", "Annualized Cost", "Unit Cost")
+colnames(Table04) <- c("Site", "Alternative", "Ecological Outputs (AAHU)", "Ecological Lift (AAHU)", "Construction Cost", "Annualized Cost", "Unit Cost")
 rownames(Table04) <- NULL
 knitr::kable(Table04, caption="Table 4. Summary of benefit and cost inputs for each site-scale alternative.", align='c') 
 ```
@@ -528,7 +528,7 @@ for(i in 1:nsites){
   CE.temp <- CEfinder(lift.temp, cost.temp)
   BB.temp <- BBfinder(lift.temp, cost.temp, CE.temp)
   
-  #Save BB names and total project first cost
+  #Save BB names and total construction cost
   BB.names.temp <- c()
   BB.cost.total.temp <- c()
   for(j in 1:length(BB.temp[[2]][,1])){
@@ -567,7 +567,7 @@ This is just placeholder text. Describe the site and alternatives. **EXPECTED Al
 i<-1
 
 #Display incremental cost results
-BB.output.temp.names <- c("Alt", "Lift (AAHU)", "Avg Ann Cost", "Inc Unit Cost","Project First Cost")
+BB.output.temp.names <- c("Alt", "Lift (AAHU)", "Avg Ann Cost", "Inc Unit Cost","Construction Cost")
 BB.output.temp <- cbind(CEICA$altnames.BB[[i]], formatC(CEICA$BB[[i]][[2]][,1], format="f", digits=2, big.mark = ","),
                         formatC(CEICA$BB[[i]][[2]][,2], format="f", digits=0, big.mark = ","),
                         formatC(CEICA$BB[[i]][[2]][,3], format="f", digits=0, big.mark = ","),
@@ -576,7 +576,7 @@ colnames(BB.output.temp) <- BB.output.temp.names
 knitr::kable(BB.output.temp, caption="Incremental cost summary.", align='c') 
 
 #Display cost-effectiveness results
-CE.output.temp.names <- c("Alt", "Lift (AAHU)", "Avg Ann Cost", "Unit Cost","Project First Cost", "CE?", "BB?")
+CE.output.temp.names <- c("Alt", "Lift (AAHU)", "Avg Ann Cost", "Unit Cost","Construction Cost", "CE?", "BB?")
 CE.output.temp <- cbind(alts[[i]], formatC(CEICA$BB[[i]][[1]][,1], format="f", digits=2, big.mark = ","),
                         formatC(CEICA$BB[[i]][[1]][,2], format="f", digits=0, big.mark = ","),
                         formatC(CEICA$BB[[i]][[1]][,2]/CEICA$BB[[i]][[1]][,1], format="f", digits=0, big.mark = ","),
@@ -921,7 +921,7 @@ Table06 <- cbind(sys.CEICA[find.sys.BB,1:8],
                  formatC(sys.CEICA[find.sys.BB,10]/sys.CEICA[find.sys.BB,9], format="f", digits=0, big.mark = ","),
                  formatC(sys.CEICA.BB[[2]][,3], format="f", digits=0, big.mark = ","))
 colnames(Table06) <- c("Plan", AAHU$ReachID[find.site.data2], "Ecological Lift", 
-                       "Average Annual Cost", "Project First Cost", "Unit Cost", "Incremental Unit Cost")
+                       "Average Annual Cost", "Construction Cost", "Unit Cost", "Incremental Unit Cost")
 rownames(Table06) <- NULL
 knitr::kable(Table06, caption="Table 6. Summary of watershed-scale CEICA outcomes.", align='c') 
 ```
@@ -1048,7 +1048,7 @@ TableB03 <- cbind(cost$ReachID, cost$SiteAction, cost$Duration_mo,
                  formatC(cost_ann$OM, format="f", digits=0, big.mark = ","),
                  formatC(cost_ann$Total, format="f", digits=0, big.mark = ","))
 colnames(TableB03) <- c("Site", "Alternative", "Construction Duration (mo)", 
-                       "Project First Cost", "Monitoring Cost", "Adapative Management Cost",
+                       "Construction Cost", "Monitoring Cost", "Adapative Management Cost",
                        "OMRRR Annual Cost", "Total Annualized Cost")
 rownames(TableB03) <- NULL
 knitr::kable(TableB03, caption="Table B03. Major cost categories for all Utoy Creek sites.", align='c') 
